--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ body {
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="navbar-logo">
             <a class="navbar-brand" href="#">
-                <img src="img/Logo.png" width="80" height="80" alt="Diseños JET" class="img-logo">
+                <img src="img/logo2.png" width="80" height="80" alt="Diseños JET" class="img-logo">
                 Diseños <span class="text-grad">JET</span>
             </a>
         </div>
